# num

./: CMakeLists.txt  README.md
cl/: rk_weighted_add.cl  types.cl
include/noma/num/: butcher_tableau.hpp  make_stepper.hpp  meta_stepper.hpp  polymorphic_stepper.hpp  rk_method.hpp  rk_stepper.hpp  stepper_type.hpp  taylor_stepper.hpp  types.hpp
src/: CMakeLists.txt
src/noma/num/: butcher_tableau.cpp  rk_method.cpp  rk_stepper.cpp  stepper_type.cpp  types.cpp
